# maple-admin-api

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md  NEW_STRUCTURE.md  PROJECT_STRUCTURE_FINAL.md  README.md  SIMPLE_STRUCTURE.md  docker-compose.yml  init-db.sh
config/: README.md
migrations/: 001_init_tables.sql  002_menu_tables.sql
src/: main.rs  routes.rs
src/api/: auth.rs  health.rs  mod.rs
src/common/: constants.rs  crypto.rs  database.rs  error.rs  jwt.rs  key_manager.rs  middleware.rs  mod.rs  postgres_service.rs  response.rs  rsa_crypto.rs
src/config/: mod.rs
src/db/: mod.rs
src/middleware/: auth.rs  deps.rs  mod.rs
src/models/: menu.rs  mod.rs  role.rs  role_menu.rs  user.rs  user_role.rs
src/modules/: mod.rs
src/modules/audit_log/: mod.rs
src/modules/auth/: dto.rs  handler.rs  mod.rs  routes.rs  service.rs
src/modules/health/: handler.rs  routes.rs
src/modules/menu/: dto.rs  handler.rs  mod.rs  routes.rs
src/modules/permission/: mod.rs
src/modules/role/: mod.rs
src/modules/system/: mod.rs
src/modules/user/: dto.rs  handler.rs  mod.rs  routes.rs
src/utils/: error.rs  mod.rs
